--- a/resume.tex
+++ b/resume.tex
@@ -160,7 +160,7 @@
         \textbf{{\LARGE Chayaphon Piyaphakdeesakun}} &
             \faPhone $\space$ (+66) 86-562-8233 $\cdot$
             \faEnvelopeOpenText $\space$ \href{mailto:hello@lxze.me}{hello@lxze.me} \\
-        {林卓偉 $\cdot$ ชยพล ปิยะภักดีสกุล} & \faLinkedin $\space$ \url{https://www.linkedin.com/in/p-chayaphon} \\
+        {林卓偉 $\cdot$ ชยพล ปิยะภักดีสกุล (พล)} & \faLinkedin $\space$ \url{https://www.linkedin.com/in/p-chayaphon} \\
         {\color{UI_Accent} Full-Stack Web Developer, NLP \& Data Engineer} & \faGithub $\space$ \url{https://github.com/LXZE} \\
     \end{tabular*}
 
@@ -171,66 +171,67 @@
 
     \vspace{-0.25cm}
     \small{
-        With 7+ years of experience including software \& web development, big data \& cloud computing and research in AI \& NLP field.
-        Possesses a Master's Degree in Computer Engineering and expertise in web, machine learning and big data solution development.
-        % Looking to leverage my knowledge and experience into a role player as a \textbf{Product Engineer} to develop an impactful product for society.
-        Looking forward to leverage my skills and knowledge to solve complex problems and develop an impactful product for society.
+        With over 7 years of professional experience, including full-stack web development, cloud \& data engineering, and research in the AI/NLP fields, I possess a versatile range of abilities.
+        Besides my practical expertise, I hold a Master's Degree in Computer Engineering. \linebreak
+        I'm eager to leverage my skills and knowledge to tackle complex problems and contribute to the creation of impactful products.
     }
-    \vspace{-0.3cm}
+    \vspace{-0.4cm}
 
     %-----------EDUCATION-----------------
     \section{Education}
+    \vspace{-0.1cm}
         \subsection*{King Mongkut's University of Technology Thonburi (KMUTT) \hfill \normalsize Bangkok, Thailand}
         \vspace{0.1cm}
         \subsection*{Master of Engineering, Computer Engineering, {\normalsize \normalfont GPA: 3.66/4.00} \hfill August 2016 --- December 2019} 
         \vspace{0.1cm}
         \subsection*{Bachelor of Engineering, Computer Engineering, {\normalsize \normalfont GPA: 3.40/4.00 \small{(Second-class Honour)}} \hfill August 2012 --- May 2016} 
-        \vspace{0.2cm}
+        \vspace{0.1cm}
 
     %%%%%%% --------------------------------------------------------------------------------------
     %%%%%%%  WORK EXPERIENCE
     %%%%%%% --------------------------------------------------------------------------------------
-    \section{Experience}
+    \section{Work Experience}
+    \vspace{-0.1cm}
 
         \subsection*{Data Engineer / Python Developer \hfill June 2022 --- Present} 
         \subtext{Adastra (Thailand) Co., Ltd. {\scriptsize (Global data analytics consulting company)} \hfill Bangkok, Thailand} 
-            \vspace{0.1cm}
+            \vspace{0.05cm}
             \begin{zitemize}
-                \item Implemented and enhanced APIs as micro-services for data explorer application and additional features in the central data product library for data mesh architecture.
-                \item Design and developed test for APIs and libraries, increasing and maintaining test coverage to stay above 95\%.
-                % \item Deployed the works on test environment and verified the correctness of the output from APIs and data pipeline.
-                \item Reviewed and refactored existing production code, to improve performance and reduce its cognitive complexity.
-                \item Collaborated with overseas teams in Agile environment for product development and resolved technical impediments promptly.
-                \item Guided and provided deep knowledge in Python, SQL, API and test-driven development for the company's new employees.
+                \item Designed and implemented APIs as micro-services for the internal data explorer application and essential features in data products and their core library for data mesh architecture.
+                \item Created test for APIs and data mesh libraries and data products to increase and maintain test coverage above 95\%.
+                \item Reviewed and refactored existing production code to improve performance and reduce cognitive complexity using best practices.
+                \item Collaborated promptly with overseas teams in Agile environment for product development and resolving technical impediments.
+                \item Guided and provided deep knowledge in Python, SQL, API and test-driven development to new employees.
             \end{zitemize}
-
         \vspace{0.2cm}
     
         \subsection*{Full-Stack Software Engineer \hfill July 2020 --- September 2021} 
         \subtext{Ingarage Assistive Technology Co., Ltd. {\scriptsize (Start-up company focusing on hardware and software development)} \hfill Bangkok, Thailand} 
-            \vspace{0.1cm}
+            \vspace{0.05cm}
             \begin{zitemize}
-                \item Designed and developed "low-code" web-based interactive workflow editor, which allows users to create, test and deploy APIs.
-                \item Planned and engineered extendable system architecture and testable codebase.
-                \item Develop automated test cases to verify both the correctness and performance of the code.
-                \item Developed a modular and robust Javascript code generator to serve the application and set up an automated environment to build a container image.
+                \item Designed and developed "low-code" workflow editor that allows users to create, test and deploy APIs in a single click.
+                \item Planned and engineered an extendable system architecture and testable codebase to reduce technical debt.
+                \item Develop test cases and perform load testing to verify application performance.
+                \item Developed a modular and robust Javascript code generator to serve the application and set up the automated environment for building a container image.
                 \item Implemented fault-tolerant queue system and integration service for deploying containerised APIs on Kubernetes.
-                \item Collaborated with stakeholders directly for robust product improvement.
+                \item Collaborated directly with stakeholders for robust product improvement in Agile manner.
             \end{zitemize}
 
         \vspace{0.2cm}
     
         \subsection*{Full-Stack Software Engineer \hfill May 2016 --- May 2018} 
         \subtext{Big Data Experience Center {\scriptsize (Leading Big Data Services Consultant Center in Thailand)} \hfill Bangkok, Thailand} 
-            \vspace{0.1cm}
+            \vspace{0.05cm}
         % { {\small \textbf{Contract with Siam Cement Group {\scriptsize (Largest Cement and Building Material Company in Southeast Asia)}}} }
         % \vspace{0.3cm}
         % { {\small \textbf{Contract with Ayudhya Capital Services {\scriptsize (Personal Loan and Credit Card Provider from one of top 5 banks in Thailand)}}} }
             % \vspace{-0.2cm}
             \begin{zitemize}
-                \item Built a web application which allows business analysts to upload tabular data to fit several statistical models and validates inferred results, to indicate the most suitable model for each products; resulting in demand prediction with data visualisation.
-                \item Designed and developed APIs for staff developers to query through terabyte-size of financial data from HiveDB.
-                \item Extended APIs to provide extra function storing inquired data into local Hadoop File System for later usage.
+                \item Built an application using R and Shiny, allowing business analysts to upload data for training statistical models
+                    and validate inferred results to determine the most suitable model for each product, resulting in demand prediction with data visualisation.
+                \item Designed and developed APIs in ExpressJS, enabling staff developers to query terabyte-sized financial data from HiveDB
+                    and provide an additional feature for storing queried data into local Hadoop File System.
+                % \item Extended APIs to
             \end{zitemize}
 
         % \vspace{0.2cm}
@@ -255,31 +256,41 @@
     %%%%%%% --------------------------------------------------------------------------------------
     %%%%%%%  Projects
     %%%%%%% --------------------------------------------------------------------------------------
+    % \vspace{-0.1cm}
     \section{Extracurricular Activities} %% (Or "Research", select as appropriate)
+    \vspace{-0.1cm}
         \subsection*{Teacher Assistant, {\normalsize\normalfont King Mongkut's University of Technology Thonburi} \hfill May 2014 --- May 2019} 
             \begin{zitemize}
                 \item Assisted in teaching C Programming, Computer Architecture, Software Engineering, Artificial Intelligence and Robot Programming.
-                \item Advised students in classes and evaluated their homework, exams and projects.
-                \item Organised programming workshops for undergraduate college students.
+                \item Advised international students in classes, organised programming workshops and evaluated their homework, exams and projects.
                 \item Designed curriculum for workshop and taught several topics, for instance, Basic Linux, Git, Python and Web Development.
             \end{zitemize}
 
     %%%%%%% --------------------------------------------------------------------------------------
     %%%%%%%  SKILLS
     %%%%%%% --------------------------------------------------------------------------------------
-    \section{Skills}
-    \begin{tabular}{p{11em} p{1em} p{43em}}
-        \hskills{Technical Skills}&  & Software \& Web Development, Distributed \& Cloud Computing, Data Engineering, Automation, Machine Learning Modeling, Natural Language Processing \\
-        \hskills{Languages} &  & Thai (Native), English (IELTS 7.5), Japanese (JLTP N3), Chinese, German, French (Elementary) \\
-        \hskills{Competencies} &  & Autonomy, Cultural Literacy, Problem Solving, Public Speaking and Teaching, Technical Writing \\
-    \end{tabular}
+    % \vspace{-0.1cm}
+    \section{Technologies, Skills and Languages}
     \vspace{-0.2cm}
+    \begin{tabular}{p{11em} p{1em} p{48em}}
+        \hskills{Frameworks \& Libraries}&  & NodeJS, ExpressJS, Fastify, React, Vue, NextJS, NuxtJS, SvelteJS, Astro, TailwindCSS, Bulma, Boostrap, \vfill
+            Flask, Pandas, Bokeh, Apache Spark, scikit-learn, Gensim, NLTK, Spacy, Tensorflow, Keras \\
+        \hskills{Databases}&  & MySQL, PostgreSQL, SQLite, MongoDB, Redis, Neo4j, Apache Hbase, ElasticSearch, InfluxDB, Firebase \\
+        \hskills{Tools \& Platforms}&  & Github, Terraform, Docker, Kubernetes, Jenkins, ArgoCD, Atlassian, AWS, Vercel, DigitalOcean, Cloudflare \\
+        \hskills{Technical Skills}&  & Full-stack Web Development, Distributed \& Cloud Computing, Data Engineering, Automation, \vfill
+            Machine Learning Modeling, Natural Language Processing \\
+        \hskills{Competencies} &  & Adaptability, Agile \& scrum methodology, Collaboration \& Communication, Cultural Literacy, \vfill
+            Problem Solving, Public Speaking and Teaching, Technical Writing, Time management \\
+        \hskills{Languages} &  & Thai (Native), English (IELTS 7.5), Japanese (JLTP N3), Chinese, German, French (Elementary) \\
+    \end{tabular}
 
     %%%%%%% --------------------------------------------------------------------------------------
     %%%%%%%  PUBLICATIONS
     %%%%%%% --------------------------------------------------------------------------------------
-    \section{Publications} 
-    \renewcommand\refname{\vskip -1.5em}
+    \vspace{-0.4cm}
+    \section{Research Publications} 
+    \vspace{-0.2cm}
+    \renewcommand\refname{\vskip -2em}
     \nocite{*}
     \printbibliography[heading=none]
     \vspace{-0.4cm}
