--- a/resume.tex
+++ b/resume.tex
@@ -161,7 +161,7 @@
             \faPhone $\space$ (+66) 86-562-8233 $\cdot$
             \faEnvelopeOpenText $\space$ \href{mailto:hello@lxze.me}{hello@lxze.me} \\
         {林卓偉 $\cdot$ ชยพล ปิยะภักดีสกุล (พล)} & \faLinkedin $\space$ \url{https://www.linkedin.com/in/p-chayaphon} \\
-        {\color{UI_Accent} Full-Stack Web Developer, NLP \& Data Engineer} & \faGithub $\space$ \url{https://github.com/LXZE} \\
+        {\color{UI_Accent} Full-Stack Web Developer, AI, NLP \& Data Engineer} & \faGithub $\space$ \url{https://github.com/LXZE} \\
     \end{tabular*}
 
     \begin{center}
@@ -193,15 +193,15 @@
     \section{Work Experience}
     \vspace{-0.1cm}
 
-        \subsection*{Data Engineer / Python Developer \hfill June 2022 --- Present} 
+        \subsection*{Data Engineer / Python Developer \hfill June 2022 --- August 2023} 
         \subtext{Adastra (Thailand) Co., Ltd. {\scriptsize (Global data analytics consulting company)} \hfill Bangkok, Thailand} 
             \vspace{0.05cm}
             \begin{zitemize}
-                \item Designed and implemented APIs as micro-services for the internal data explorer application and essential features in data products and their core library for data mesh architecture.
-                \item Created test for APIs and data mesh libraries and data products to increase and maintain test coverage above 95\%.
+                \item Designed and implemented APIs as micro-services for the internal data explorer application, essential features in data products and the customer's core library for data mesh architecture.
+                \item Created test for APIs, data mesh libraries and data products to increase and maintain test coverage above 95\%.
                 \item Reviewed and refactored existing production code to improve performance and reduce cognitive complexity using best practices.
-                \item Collaborated promptly with overseas teams in Agile environment for product development and resolving technical impediments.
-                \item Guided and provided deep knowledge in Python, SQL, API and test-driven development to new employees.
+                \item Collaborated effectively with overseas teams in Agile environment for product development and resolving technical impediments.
+                \item Guided and provided deep knowledge in Coding best practices, Python, SQL, and test-driven development to new employees.
             \end{zitemize}
         \vspace{0.2cm}
     
@@ -229,7 +229,7 @@
             \begin{zitemize}
                 \item Built an application using R and Shiny, allowing business analysts to upload data for training statistical models
                     and validate inferred results to determine the most suitable model for each product, resulting in demand prediction with data visualisation.
-                \item Designed and developed APIs in ExpressJS, enabling staff developers to query terabyte-sized financial data from HiveDB
+                \item Designed and developed APIs in Express.js, enabling staff developers to query terabyte-sized financial data from HiveDB
                     and provide an additional feature for storing queried data into local Hadoop File System.
                 % \item Extended APIs to
             \end{zitemize}
@@ -273,15 +273,15 @@
     \section{Technologies, Skills and Languages}
     \vspace{-0.2cm}
     \begin{tabular}{p{11em} p{1em} p{48em}}
-        \hskills{Frameworks \& Libraries}&  & NodeJS, ExpressJS, Fastify, React, Vue, NextJS, NuxtJS, SvelteJS, Astro, TailwindCSS, Bulma, Boostrap, \vfill
-            Flask, Pandas, Bokeh, Apache Spark, scikit-learn, Gensim, NLTK, Spacy, Tensorflow, Keras \\
-        \hskills{Databases}&  & MySQL, PostgreSQL, SQLite, MongoDB, Redis, Neo4j, Apache Hbase, ElasticSearch, InfluxDB, Firebase \\
-        \hskills{Tools \& Platforms}&  & Github, Terraform, Docker, Kubernetes, Jenkins, ArgoCD, Atlassian, AWS, Vercel, DigitalOcean, Cloudflare \\
-        \hskills{Technical Skills}&  & Full-stack Web Development, Distributed \& Cloud Computing, Data Engineering, Automation, \vfill
-            Machine Learning Modeling, Natural Language Processing \\
-        \hskills{Competencies} &  & Adaptability, Agile \& scrum methodology, Collaboration \& Communication, Cultural Literacy, \vfill
+        \hskills{Technical Skills}&  & Full-stack Web Development \& Testing, System Administration, Distributed \& Cloud Computing, \vfill
+            Data Engineering, Chatbot, AI \& Natural Language Processing Algorithm, LLM, Predictive Modeling \\
+        \hskills{Programming}&  & Python, TypeScript (Proficient), Elixir, Rust, R (Experienced), C, PHP, Ruby (Familiar) \\
+        \hskills{Databases}&  & MySQL, PostgreSQL, SQLite, IndexedDB, MongoDB, Redis, Neo4j, Apache Hive, ElasticSearch, InfluxDB \\
+        \hskills{Tools}&  & Docker, Kubernetes, Terraform, Jenkins, Argo Workflows, Github Actions, SonarQube \\
+        \hskills{Platforms}&  & Github, Atlassian, AWS, Vercel, DigitalOcean, Cloudflare, OpenShift, Firebase \\
+        \hskills{Soft Competencies}&  & Adaptability, Agile \& Scrum Methodology, Collaboration \& Communication, Cultural Literacy, \vfill
             Problem Solving, Public Speaking and Teaching, Technical Writing, Time management \\
-        \hskills{Languages} &  & Thai (Native), English (IELTS 7.5), Japanese (JLTP N3), Chinese, German, French (Elementary) \\
+        \hskills{Languages}&  & Thai (Native), English (IELTS 7.5), Japanese (JLTP N3), Chinese (Familiar), German, French (Basic) \\
     \end{tabular}
 
     %%%%%%% --------------------------------------------------------------------------------------
