--- a/resume.tex
+++ b/resume.tex
@@ -27,22 +27,28 @@
 \usepackage[a4paper,top=1cm,bottom=1cm,left=1cm,right=1cm]{geometry}
 %% ---- Chinese ---- %%
 \usepackage{xeCJK}
-\setCJKmainfont{Microsoft JhengHei UI}
-\setCJKmonofont{Microsoft JhengHei UI}
-\setCJKsansfont{Microsoft JhengHei UI}
+\setCJKmainfont{msjh.ttc}[
+    Path = /workdir/resume_latex/fonts/
+]
+\setCJKmonofont{msjh.ttc}[
+    Path = /workdir/resume_latex/fonts/
+]
+\setCJKsansfont{msjh.ttc}[
+    Path = /workdir/resume_latex/fonts/
+]
 
 %% ---- LaTeX syntax utility package ---- %%
 \usepackage{etoolbox}
 
 %% ---- Set up fonts and encoding ---- %%
-\XeTeXlinebreaklocale "th"
+% \XeTeXlinebreaklocale "th"
 \XeTeXlinebreakskip = 0pt plus 0pt
 \sloppy
 
 \usepackage{fontspec}
 \defaultfontfeatures{Mapping=tex-text}
 \setmainfont[
-    BoldFont={Laksaman-Bold.otf}, 
+    BoldFont={Laksaman-Bold.otf},
     ItalicFont={Laksaman-Italic.otf},
     BoldItalicFont={Laksaman-BoldItalic.otf}
 ]{Laksaman.otf}
@@ -51,7 +57,7 @@
 \newfontfamily{\thaifont}[
     Scale=MatchUppercase,
     Mapping=tex-text,
-    BoldFont={Laksaman-Bold.otf}, 
+    BoldFont={Laksaman-Bold.otf},
     ItalicFont={Laksaman-Italic.otf},
     BoldItalicFont={Laksaman-BoldItalic.otf}
 ]{Laksaman.otf}
@@ -72,9 +78,9 @@
 \usepackage{polyglossia}
 \setdefaultlanguage{thai}
 \setotherlanguage{thai}
-\AtBeginDocument\captionsthai  
+\AtBeginDocument\captionsthai
 
-% Introducing hair space 
+% Introducing hair space
 \newrobustcmd{\hrsp}{\ifmmode\mskip1mu\else\kern0.0625em\fi}
 
 \usepackage{url}
@@ -83,12 +89,12 @@
 \usepackage{hologo}
 \usepackage{fontawesome5}
 
-\newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}} 
+\newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}}
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 
 %%%% Set Page
 \pagestyle{fancy}
-\fancyhf{} 
+\fancyhf{}
 \fancyfoot{}
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
@@ -124,7 +130,7 @@
 
 %%%% Set Sections formatting
 \titleformat{\section}{
-\color{UI_Accent} \scshape \raggedright \large 
+\color{UI_Accent} \scshape \raggedright \large
 }{}{0em}{}[\vspace{-10pt} \hrulefill \vspace{-6pt}]
 
 %%%% Set Subtext Formatting
@@ -148,7 +154,7 @@
 \textbf{\bfseries #1} }
 
 %%%% Set Subsection formatting
-\titleformat{\subsection}{\vspace{-0.1cm} 
+\titleformat{\subsection}{\vspace{-0.1cm}
 \bfseries \fontsize{14pt}{2cm}}{}{0em}{}[\vspace{-0.2cm}]
 
 \author{Chayaphon Piyaphakdeesakun}
@@ -157,21 +163,32 @@
 \begin{document}
 
     \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-        \textbf{{\LARGE Chayaphon Piyaphakdeesakun}} &
-            \faPhone $\space$ (+66) 86-562-8233 $\cdot$
-            \faEnvelopeOpenText $\space$ \href{mailto:hello@lxze.me}{hello@lxze.me} \\
-        {林卓偉 $\cdot$ ชยพล ปิยะภักดีสกุล (พล)} & \faLinkedin $\space$ \url{https://www.linkedin.com/in/p-chayaphon} \\
-        {\color{UI_Accent} Full-Stack Web Developer, AI, NLP \& Data Engineer} & \faGithub $\space$ \url{https://github.com/LXZE} \\
+        \textbf{{\LARGE Chayaphon Piyaphakdeesakun} (Paul Lim)} & {
+            \faPhone $\space$ (+66) 86-562-8233
+                $\cdot$
+            \faEnvelopeOpenText $\space$ \href{mailto:job@lxze.me}{job@lxze.me}
+        } \\
+
+        {林卓偉 $\cdot$ ชยพล ปิยะภักดีสกุล (พล)} & {
+            \faGithub $\space$ \href{https://github.com/LXZE}{github.com/LXZE}
+                $\cdot$
+            \faLinkedin $\space$ \href{https://www.linkedin.com/in/p-chayaphon/}{in/p-chayaphon}
+        } \\
+
+        {\color{UI_Accent} Full-Stack Software Developer, AI \& Data Engineer} & {
+            \faLink $\space$ \href{https://lxze.me}{lxze.me}
+        } \\
+
     \end{tabular*}
 
     \begin{center}
-        \vspace{-0.2cm} 
+        \vspace{-0.3cm}
         {\color{UI_Accent} \hrulefill}
     \end{center}
 
-    \vspace{-0.25cm}
+    \vspace{-0.3cm}
     \small{
-        With over 7 years of professional experience, including full-stack web development, cloud \& data engineering, and research in the AI/NLP fields, I possess a versatile range of abilities.
+        With over 8 years of professional experience, including software development, cloud \& data engineering, and research in the AI/NLP fields, I possess a versatile range of abilities.
         Besides my practical expertise, I hold a Master's Degree in Computer Engineering. \linebreak
         I'm eager to leverage my skills and knowledge to tackle complex problems and contribute to the creation of impactful products.
     }
@@ -182,9 +199,9 @@
     \vspace{-0.1cm}
         \subsection*{King Mongkut's University of Technology Thonburi (KMUTT) \hfill \normalsize Bangkok, Thailand}
         \vspace{0.1cm}
-        \subsection*{Master of Engineering, Computer Engineering, {\normalsize \normalfont GPA: 3.66/4.00} \hfill August 2016 --- December 2019} 
+        \subsection*{Master of Engineering, Computer Engineering, {\normalsize \normalfont GPA: 3.66/4.00} \hfill August 2016 --- December 2019}
         \vspace{0.1cm}
-        \subsection*{Bachelor of Engineering, Computer Engineering, {\normalsize \normalfont GPA: 3.40/4.00 \small{(Second-class Honour)}} \hfill August 2012 --- May 2016} 
+        \subsection*{Bachelor of Engineering, Computer Engineering, {\normalsize \normalfont GPA: 3.40/4.00 \small{(Second-class Honour)}} \hfill August 2012 --- May 2016}
         \vspace{0.1cm}
 
     %%%%%%% --------------------------------------------------------------------------------------
@@ -193,8 +210,19 @@
     \section{Work Experience}
     \vspace{-0.1cm}
 
-        \subsection*{Data Engineer / Python Developer \hfill June 2022 --- August 2023} 
-        \subtext{Adastra (Thailand) Co., Ltd. {\scriptsize (Global data analytics consulting company)} \hfill Bangkok, Thailand} 
+        \subsection*{Section Manager --- AI, Data \& Cloud Engineering \hfill May 2024 --- Present}
+        \subtext{Banpu Public Company Limited {\scriptsize (Energy solutions company based in Thailand)} \hfill Bangkok, Thailand}
+            \vspace{0.05cm}
+            \begin{zitemize}
+                \item Led the research, prototyping, and productionization of a VRP model to optimize delivery routes for one of Thailand's largest breweries, resulting in significant customer satisfaction and a reduction in planning time from 2 hours to within 15 minutes.
+                \item Established project structure, enforced coding standards and testing practices, and provided mentorship to team members to ensure efficient and high-quality development.
+                \item Collaborated closely with managers and business stakeholders to align project goals and deliver a customer-centric solution.
+            \end{zitemize}
+
+        \vspace{0.2cm}
+
+        \subsection*{Data Engineer / Python Developer \hfill June 2022 --- August 2023}
+        \subtext{Adastra (Thailand) Co., Ltd. {\scriptsize (Global data analytics consulting company)} \hfill Bangkok, Thailand}
             \vspace{0.05cm}
             \begin{zitemize}
                 \item Designed and implemented APIs as micro-services for the internal data explorer application, essential features in data products and the customer's core library for data mesh architecture.
@@ -203,10 +231,11 @@
                 \item Collaborated effectively with overseas teams in Agile environment for product development and resolving technical impediments.
                 \item Guided and provided deep knowledge in Coding best practices, Python, SQL, and test-driven development to new employees.
             \end{zitemize}
+
         \vspace{0.2cm}
-    
-        \subsection*{Full-Stack Software Engineer \hfill July 2020 --- September 2021} 
-        \subtext{Ingarage Assistive Technology Co., Ltd. {\scriptsize (Start-up company focusing on hardware and software development)} \hfill Bangkok, Thailand} 
+
+        \subsection*{Full-Stack Software Engineer \hfill July 2020 --- September 2021}
+        \subtext{Ingarage Assistive Technology Co., Ltd. {\scriptsize (Start-up company focusing on hardware and software development)} \hfill Bangkok, Thailand}
             \vspace{0.05cm}
             \begin{zitemize}
                 \item Designed and developed "low-code" workflow editor that allows users to create, test and deploy APIs in a single click.
@@ -217,32 +246,38 @@
                 \item Collaborated directly with stakeholders for robust product improvement in Agile manner.
             \end{zitemize}
 
+        % \vspace{0.2cm}
+
+        % \subsection*{Full-Stack Software Engineer \hfill May 2016 --- May 2018}
+        % \subtext{Big Data Experience Center {\scriptsize (Leading Big Data Services Consultant Center in Thailand)} \hfill Bangkok, Thailand}
+        %     \vspace{0.05cm}
+        %     \begin{zitemize}
+        %         \item Built an application using R and Shiny, allowing business analysts to upload data for training statistical models
+        %             and validate inferred results to determine the most suitable model for each product, resulting in demand prediction with data visualisation.
+        %         \item Designed and developed APIs in Express.js, enabling staff developers to query terabyte-sized financial data from HiveDB
+        %             and provide an additional feature for storing queried data into local Hadoop File System.
+        %     \end{zitemize}
+
         \vspace{0.2cm}
-    
-        \subsection*{Full-Stack Software Engineer \hfill May 2016 --- May 2018} 
-        \subtext{Big Data Experience Center {\scriptsize (Leading Big Data Services Consultant Center in Thailand)} \hfill Bangkok, Thailand} 
+
+        \subsection*{Teacher Assistant \hfill May 2014 --- May 2019}
+        \subtext{King Mongkut's University of Technology Thonburi \hfill Bangkok, Thailand}
             \vspace{0.05cm}
-        % { {\small \textbf{Contract with Siam Cement Group {\scriptsize (Largest Cement and Building Material Company in Southeast Asia)}}} }
-        % \vspace{0.3cm}
-        % { {\small \textbf{Contract with Ayudhya Capital Services {\scriptsize (Personal Loan and Credit Card Provider from one of top 5 banks in Thailand)}}} }
-            % \vspace{-0.2cm}
             \begin{zitemize}
-                \item Built an application using R and Shiny, allowing business analysts to upload data for training statistical models
-                    and validate inferred results to determine the most suitable model for each product, resulting in demand prediction with data visualisation.
-                \item Designed and developed APIs in Express.js, enabling staff developers to query terabyte-sized financial data from HiveDB
-                    and provide an additional feature for storing queried data into local Hadoop File System.
-                % \item Extended APIs to
+                \item Assisted in teaching C Programming, Computer Architecture, Software Engineering, Artificial Intelligence and Robot Programming.
+                \item Advised international students in classes, organised programming workshops and evaluated their homework, exams and projects.
+                \item Designed curriculum for workshop and taught several topics, for instance, Basic Linux, Git, Python and Web Development.
             \end{zitemize}
 
         % \vspace{0.2cm}
 
-        % \subsection*{Internship \hfill June 2015 --- July 2015} 
-        % \subtext{Universität Bremen \hfill Bremen, Germany} 
-        %     \vspace{0.1cm}    
+        % \subsection*{Internship \hfill June 2015 --- July 2015}
+        % \subtext{Universität Bremen \hfill Bremen, Germany}
+        %     \vspace{0.1cm}
         %     \begin{zitemize}
         %         \item Responsibled for researching and developing the prototype of a visualiser for an interactive device, and the individual IoT project.
         %     \end{zitemize}
-        
+
     %%%%%%% --------------------------------------------------------------------------------------
     %%%%%%%  AWARDS & HONORS
     %%%%%%% --------------------------------------------------------------------------------------
@@ -250,21 +285,8 @@
     % \vspace{-0.2cm}
     % \begin{tabular}[t]{ p{4em} p{55em}}
     % \hskills{March 2016} & Honourable Mention Award from Thailand's National Electronics and Computer Technology Center (NECTEC) with Project COCO (Composite of Operation monitoring with social media tracking in Corporation and Optimized managing tools)
-    % \end{tabular} 
+    % \end{tabular}
     % \vspace{-0.3cm}
-
-    %%%%%%% --------------------------------------------------------------------------------------
-    %%%%%%%  Projects
-    %%%%%%% --------------------------------------------------------------------------------------
-    % \vspace{-0.1cm}
-    \section{Extracurricular Activities} %% (Or "Research", select as appropriate)
-    \vspace{-0.1cm}
-        \subsection*{Teacher Assistant, {\normalsize\normalfont King Mongkut's University of Technology Thonburi} \hfill May 2014 --- May 2019} 
-            \begin{zitemize}
-                \item Assisted in teaching C Programming, Computer Architecture, Software Engineering, Artificial Intelligence and Robot Programming.
-                \item Advised international students in classes, organised programming workshops and evaluated their homework, exams and projects.
-                \item Designed curriculum for workshop and taught several topics, for instance, Basic Linux, Git, Python and Web Development.
-            \end{zitemize}
 
     %%%%%%% --------------------------------------------------------------------------------------
     %%%%%%%  SKILLS
@@ -273,28 +295,26 @@
     \section{Technologies, Skills and Languages}
     \vspace{-0.2cm}
     \begin{tabular}{p{11em} p{1em} p{48em}}
-        \hskills{Technical Skills}&  & Full-stack Web Development \& Testing, System Administration, Distributed \& Cloud Computing, \vfill
-            Data Engineering, Chatbot, AI \& Natural Language Processing Algorithm, LLM, Predictive Modeling \\
-        \hskills{Programming}&  & Python, TypeScript (Proficient), Elixir, Rust, R (Experienced), C, PHP, Ruby (Familiar) \\
+        \hskills{Technical Skills}&  & Full-stack Software Development \& Testing, System Administration, Distributed \& Cloud Computing, \vfill
+            Data Engineering, AI, Optimization, Predictive Modeling, Chatbot \& LLM, Natural Language Processing \\
+        \hskills{Programming}&  & Python, TypeScript, SQL (Proficient), C, PHP, R (Experienced), Elixir, Haskell, Ruby, Rust (Familiar) \\
         \hskills{Databases}&  & MySQL, PostgreSQL, SQLite, IndexedDB, MongoDB, Redis, Neo4j, Apache Hive, ElasticSearch, InfluxDB \\
         \hskills{Tools}&  & Docker, Kubernetes, Terraform, Jenkins, Argo Workflows, Github Actions, SonarQube \\
-        \hskills{Platforms}&  & Github, Atlassian, AWS, Vercel, DigitalOcean, Cloudflare, OpenShift, Firebase \\
+        \hskills{Platforms}&  & Github, Atlassian, AWS, Microsoft Azure, Vercel, DigitalOcean, Cloudflare, OpenShift, Firebase \\
         \hskills{Soft Competencies}&  & Adaptability, Agile \& Scrum Methodology, Collaboration \& Communication, Cultural Literacy, \vfill
-            Problem Solving, Public Speaking and Teaching, Technical Writing, Time management \\
-        \hskills{Languages}&  & Thai (Native), English (IELTS 7.5), Japanese (JLTP N3), Chinese (Familiar), German, French (Basic) \\
+            Problem Solving, Public Speaking \& Teaching, Technical Writing, Project \& Time management \\
+        \hskills{Languages}&  & Thai (Native) English (IELTS 7.5) Japanese (JLTP N2) Chinese (Familiar) German, French (Basic) \\
     \end{tabular}
 
     %%%%%%% --------------------------------------------------------------------------------------
     %%%%%%%  PUBLICATIONS
     %%%%%%% --------------------------------------------------------------------------------------
     \vspace{-0.4cm}
-    \section{Research Publications} 
+    \section{Research Publications}
     \vspace{-0.2cm}
     \renewcommand\refname{\vskip -2em}
     \nocite{*}
     \printbibliography[heading=none]
     \vspace{-0.4cm}
-
-  
 
 \end{document}
